# voice_navigation2025_8_29

./: README.md  start.txt
install/: local_setup.sh  setup.sh
install/map_publisher/lib/map_publisher/: map_publisher_node
install/map_publisher/share/map_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav2_costmap_filters_demo/share/nav2_costmap_filters_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pose_navigator/lib/pose_navigator/: color_navigator  coretask  forward_return_node  pose_navigator  pose_navigator_node  test_color_sequence  test_waypoints
install/pose_navigator/share/pose_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot4_base/lib/turtlebot4_base/: turtlebot4_base_node
log/: latest_build
src/: 912map.yaml
src/pose_navigator/: setup.py
src/pose_navigator/pose_navigator/: color_navigatorold.py  coretask.py  forward_return_node.py  pose_navigator_node.py  test_color_sequence.py  test_waypoints.py
src/turtlebot4_robot/: frames_2025-06-17_10.48.26.gv
src/voice_nav2_assistant/: package.xml  setup.cfg  setup.py
src/voice_nav2_assistant/voice_nav2_assistant/: voice_nav_node.py
src/voice_nav2_assistant/voice_nav2_assistant/config/: places.yaml
src/voice_nav2_assistant/voice_nav2_assistant/launch/: from_file.launch.py
ubuntu22.04_ros2/: Dockerfile  run.sh
(+316 files in other folders)
